Fundamentos de html

--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><!--lenguaje-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ya me quiero ir a comer</title>
+    <!--Agregamos el link CSS-->
+        <link rel="stylesheet" href="./CSS/Miestilos.css">
+    <!--Agregamos el link Tipo de letra-->
 </head>
 <body>
+    <div class="divPrincipal">
+        <a href="Tablas.HTML">
+            Segunda pagina
+        </a>
+        <h1>Encabezado1</h1>
+        <p>Esto es un parrafo</p>
+        <b>Letra negrita</b>
+        <i>Cursiva</i>
+        <s>Subrrallado</s>
+        <ins>Texto insertado</ins>
+        <sub>Texto subindice</sub>
+        <sup>Super indice</sup>
+        <small>Texto pequeño</small>
+        <mark>Texto marcado</mark>
+        <ul>
+            <li>Uno</li>
+            <li>Dos</li>
+            <li>Tres</li>
+        </ul>
+        <ol>
+            <li>Uno</li>
+            <li>Dos</li>
+            <li>Tres</li>
+        </ol>
+        <a href="https://www.ugto.mx">
+            Visita UG
+        </a>
+
+    </div>
+
+    <!--Agregamos el link JS-->
     
 </body>
 </html>
